Unix permission conversion is no longer needed and causes race conditions
Ticket: #21858

--- a/ui/inspectors/service.reel/ftp-service.reel/ftp-service.html
+++ b/ui/inspectors/service.reel/ftp-service.reel/ftp-service.html
@@ -250,7 +250,7 @@
                 "title": "File creation mask"
             },
             "bindings": {
-                "modes": {"<->": "@owner.filemaskModes"}
+                "modes": {"<->": "@owner.object.filemask"}
             }
         },
         "dirmask": {
@@ -260,7 +260,7 @@
                 "title": "Directory creation mask"
             },
             "bindings": {
-                "modes": {"<->": "@owner.dirmaskModes"}
+                "modes": {"<->": "@owner.object.dirmask"}
             }
         },
         "ident": {
