--- a/ui/inspectors/service.reel/tftpd-service.reel/tftpd-service.html
+++ b/ui/inspectors/service.reel/tftpd-service.reel/tftpd-service.html
@@ -93,7 +93,7 @@
                 "title": "Umask"
             },
             "bindings": {
-                "modes": {"<->": "@owner.umaskModes"}
+                "modes": {"<->": "@owner.object.umask"}
             }
         }
     }
