treeview currentnode empty message should be centered

--- a/ui/controls/tree-view.reel/current-node.reel/current-node.html
+++ b/ui/controls/tree-view.reel/current-node.reel/current-node.html
@@ -81,8 +81,7 @@
 </head>
 <body>
     <div data-montage-id="owner" class="CurrentNode">
-        <div class="CurrentNode-scrollview">
-            <div data-montage-id="scrollview">
+            <div data-montage-id="scrollview" class="CurrentNode-scrollview">
                 <div class="CurrentNode-emptyState">
                     <span data-montage-id="currentNodeName"></span>
                     <span data-montage-id="emptyMessage"></span>
@@ -91,7 +90,6 @@
                     <div data-montage-id="childNode" class="CurrentNode-childNode"></div>
                 </div>
             </div>
-        </div>
     </div>
 </body>
 </html>
