Hide and disable save/revert buttons from topology on detached volumes
Ticket: #21819

--- a/ui/sections/storage/inspectors/topology.reel/topology.html
+++ b/ui/sections/storage/inspectors/topology.reel/topology.html
@@ -26,12 +26,13 @@
             "properties": {
                 "element": {"#": "inspector"},
                 "validationController": {"@": "validationController"},
-                "canDelete": true,
-                "canRevert": true,
-                "canSave": true,
                 "controller": {"@": "owner"}
             },
             "bindings": {
+                "canDelete": {"<-": "!@owner.object._isDetached"},
+                "canRevert": {"<-": "!@owner.object._isDetached"},
+                "canSave": {"<-": "!@owner.object._isDetached"},
+                "isFooterHidden": {"<-": "!@owner.object._isDetached"},
                 "context": {"<-": "@owner.context"},
                 "isLocked": {"<->": "@owner.isLocked"}
             }
