--- a/ui/sections/vms/inspectors/virtual-machine-device.reel/virtual-machine-device.html
+++ b/ui/sections/vms/inspectors/virtual-machine-device.reel/virtual-machine-device.html
@@ -55,6 +55,27 @@
                 "disabled": {"<-": "@owner.object._isFromTemplate"}
             }
         },
+        "deviceStatusLight": {
+            "prototype": "ui/controls/traffic-light.reel",
+            "properties": {
+                "element": {"#": "deviceStatusLight"},
+                "colorMapping": {"CONNECTED" : "green", "ERROR": "yellow", "DISCONNECTED" : "red", "UNKNOWN": "grey"}
+            },
+            "bindings": {
+                "value": {"<-": "@owner.object.status ? @owner.object.status : 'UNKNOWN'"},
+                "isHidden": {"<-": "@owner.object._isNew"}
+            }
+        },
+        "deviceStatusLabel": {
+            "prototype": "montage/ui/text.reel",
+            "properties": {
+                "element": {"#": "deviceStatusLabel"},
+                "value": "Device Status"
+            },
+            "bindings": {
+                "classList.has('is-hidden')": {"<-": "@owner.object._isNew"}
+            }
+        },
         "deviceTypePlaceholder": {
             "prototype": "ui/controls/placeholder.reel",
             "properties": {
@@ -75,6 +96,10 @@
         <div data-montage-id="inspector">
             <div data-montage-id="name"></div>
             <div data-montage-id="deviceTypePlaceholder"></div>
+            <div class="flex-row flex-align--center g-margin-bottom">
+                <div data-montage-id="deviceStatusLight" class="g-margin-right--half"></div>
+                <div data-montage-id="deviceStatusLabel"></div>
+            </div>
         </div>
     </div>
 </body>
