Send username instead of ids when creating a command task Ticket: #21813

--- a/ui/inspectors/calendar-task.reel/cron-args.reel/cron-args.html
+++ b/ui/inspectors/calendar-task.reel/cron-args.reel/cron-args.html
@@ -24,7 +24,8 @@
             "prototype": "ui/controls/search-users.reel",
             "properties": {
                 "element": {"#": "user"},
-                "label": "User"
+                "label": "User",
+                "valuePath": "username"
             },
             "bindings": {
                 "value": {"<->": "@owner.object.0"}
