hides browser warning message

--- a/ui/sign-in.reel/sign-in.html
+++ b/ui/sign-in.reel/sign-in.html
@@ -78,7 +78,7 @@
                 "value": "We're sorry but at this time FreeNAS only supports the Chrome browser."
             },
             "bindings": {
-                "classList.has('is-hidden')": {"<-": "@owner.isBrowserSupported"}
+                "classList.has('is-hidden')": {"<-": "true"}
             }
         }
     }
