--- a/ui/sections/accounts/inspectors/kerberos-realm.reel/kerberos-realm.html
+++ b/ui/sections/accounts/inspectors/kerberos-realm.reel/kerberos-realm.html
@@ -37,7 +37,8 @@
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
                 "element": {"#": "realm"},
-                "label": "Realm"
+                "label": "Realm",
+                "placeholder": "e.g. 1.2.3.4"
             },
             "bindings": {
                 "value": {"<->": "@owner.object.realm"}
@@ -48,7 +49,8 @@
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
                 "element": {"#": "kdcAddress"},
-                "label": "KDC Address"
+                "label": "KDC Address",
+                "placeholder": "e.g. 1.2.3.4"
             },
             "bindings": {
                 "value": {"<->": "@owner.object.kdc_address"}
@@ -59,7 +61,8 @@
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
                 "element": {"#": "adminServer"},
-                "label": "Admin Server"
+                "label": "Admin Server",
+                "placeholder": "e.g. 1.2.3.4"
             },
             "bindings": {
                 "value": {"<->": "@owner.object.admin_server_address"}
@@ -70,7 +73,8 @@
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
                 "element": {"#": "passwordServer"},
-                "label": "Password Server"
+                "label": "Password Server",
+                "placeholder": "e.g. 1.2.3.4"
             },
             "bindings": {
                 "value": {"<->": "@owner.object.password_server_address"}
