--- a/ui/sections/containers/inspectors/container.reel/container.html
+++ b/ui/sections/containers/inspectors/container.reel/container.html
@@ -133,7 +133,8 @@
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
                 "element": {"#": "name"},
-                "label": "Name"
+                "label": "Name",
+                "placeholder": "name the container"
             },
             "bindings": {
                 "value": {"<->": "@owner.object.names.0"},
