--- a/ui/sections/system/inspectors/tunable.reel/tunable.html
+++ b/ui/sections/system/inspectors/tunable.reel/tunable.html
@@ -33,7 +33,8 @@
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
                 "element": {"#": "value"},
-                "label": "Value"
+                "label": "Value",
+                "placeholder": "/var/lib/myhack.so"
             },
             "bindings": {
                 "value": {"<->": "@owner.object.value"}
@@ -43,7 +44,8 @@
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
                 "element": {"#": "variable"},
-                "label": "Variable"
+                "label": "Variable",
+                "placeholder": "LD_PRELOAD"
             },
             "bindings": {
                 "value": {"<->": "@owner.object.var"}
