--- a/ui/sections/system/inspectors/web-ui.reel/web-ui.html
+++ b/ui/sections/system/inspectors/web-ui.reel/web-ui.html
@@ -50,7 +50,8 @@
                 "isDraggable": true,
                 "inputTitle": "Add Bind IP Address",
                 "valuesTitle": "Bind IP Addresses",
-                "emptyMessage": "No IP addresses allowed"
+                "emptyMessage": "No IP addresses allowed",
+                "placeholder": "eg. 1.2.3.4"
             },
             "bindings": {
                 "values": {"<->": "@owner.config.webui_listen"},
