--- a/ui/sections/system/inspectors/crypto-certificate.reel/crypto-certificate.html
+++ b/ui/sections/system/inspectors/crypto-certificate.reel/crypto-certificate.html
@@ -49,7 +49,8 @@
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
                 "element": {"#": "name"},
-                "label": "Name"
+                "label": "Name",
+                "placeholder": "create a certificate name"
             },
             "bindings": {
                 "value": {"<->": "@owner.object.name"}
