--- a/ui/sections/accounts/inspectors/directory-services.reel/directory-services.html
+++ b/ui/sections/accounts/inspectors/directory-services.reel/directory-services.html
@@ -110,7 +110,7 @@
             <div data-montage-id="scrollView" class="DirectoryServices-body">
                 <div data-montage-id="directoryServices"></div>
             </div>
-            <div class="DirectoryServices-searchorderContainer">
+            <div class="DirectoryServices-searchorderContainer g-margin-top">
                 <div data-montage-id="ntpServers"></div>
                 <div class="flex-row flex-justifyContent--end g-margin-bottom g-margin-top--subtract-half">
                     <div data-montage-id="ntpSyncNow"></div>
