UPDATED: hide path when display only

--- a/ui/sections/vms/inspectors/virtual-machine-datastore.reel/virtual-machine-datastore-volume.reel/virtual-machine-datastore-volume.html
+++ b/ui/sections/vms/inspectors/virtual-machine-datastore.reel/virtual-machine-datastore-volume.reel/virtual-machine-datastore-volume.html
@@ -16,7 +16,8 @@
                 "label": "Path"
             },
             "bindings": {
-                "value": {"<->": "@owner.object.path"}
+                "value": {"<->": "@owner.object.path"},
+                "classList.has('hide')": {"<-": "!@owner.isNewObject"}
             }
         }
     }
