UPDATED: round rtt

--- a/ui/sections/peering/inspectors/freenas-credentials.reel/freenas-credentials.html
+++ b/ui/sections/peering/inspectors/freenas-credentials.reel/freenas-credentials.html
@@ -106,7 +106,7 @@
                 "label": "Round Trip Time"
             },
             "bindings": {
-                "value": {"<-": "@owner.object.status.rtt + ' ms'"}
+                "value": {"<-": "(@owner.object.status.rtt * 1000).toFixed(2) + ' ms'"}
             }
         }
     }
