edits placeholder values

--- a/ui/sections/accounts/inspectors/kerberos-realm.reel/kerberos-realm.html
+++ b/ui/sections/accounts/inspectors/kerberos-realm.reel/kerberos-realm.html
@@ -38,7 +38,7 @@
             "properties": {
                 "element": {"#": "realm"},
                 "label": "Realm",
-                "placeholder": "e.g. 1.2.3.4"
+                "placeholder": "e.g. IXSYSTEMS.COM"
             },
             "bindings": {
                 "value": {"<->": "@owner.object.realm"}
