--- a/ui/sections/system/inspectors/tunable.reel/tunable.html
+++ b/ui/sections/system/inspectors/tunable.reel/tunable.html
@@ -34,7 +34,7 @@
             "properties": {
                 "element": {"#": "value"},
                 "label": "Value",
-                "placeholder": "/var/lib/myhack.so"
+                "placeholder": "e.g. /var/lib/myhack.so"
             },
             "bindings": {
                 "value": {"<->": "@owner.object.value"}
@@ -45,7 +45,7 @@
             "properties": {
                 "element": {"#": "variable"},
                 "label": "Variable",
-                "placeholder": "LD_PRELOAD"
+                "placeholder": "e.g. LD_PRELOAD"
             },
             "bindings": {
                 "value": {"<->": "@owner.object.var"}
