--- a/ui/controls/cascading-list.reel/cascading-list-item.reel/cascading-list-item.html
+++ b/ui/controls/cascading-list.reel/cascading-list-item.reel/cascading-list-item.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
 <head>
     <title></title>
@@ -12,8 +12,7 @@
             },
             "bindings": {
                 "selectedObject": {"<->": "@content.component.selectedObject"},
-                "classList.has('has-error')": {"<-": "@owner.error.defined()"},
-                "classList.has('help-is-shown')": {"<-": "@owner.helpShown"}
+                "classList.has('has-error')": {"<-": "@owner.error.defined()"}
             },
             "listeners": [
                 {
@@ -43,34 +42,12 @@
                 "object": {"<-": "@owner.data.object"},
                 "context": {"<-": "@owner.data"}
             }
-        },
-        "helpLabel": {
-            "prototype": "blue-shark/ui/text.reel",
-            "properties": {
-                "element": {"#": "helpLabel"},
-                "value": "Help"
-            }
-        },
-        "helpMessage": {
-            "prototype": "blue-shark/ui/text.reel",
-            "properties": {
-                "element": {"#": "helpMessage"}
-            },
-            "bindings": {
-                "value": {"<-": "@owner.object.path(@owner.userInterfaceDescriptor.helpMessage)"}
-            }
         }
     }
     </script>
 </head>
 <body>
     <div data-montage-id="owner" class="CascadingListItem">
-        <div class="CascadingListItem-help">
-            <div class="CascadingListItem-help-message">
-                <h5 data-montage-id="helpLabel"></h5>
-                <div data-montage-id="helpMessage"></div>
-            </div>
-        </div>
         <div data-montage-id="loading" class="CascadingListItem-spinner"></div>
         <div data-montage-id="content" class="CascadingListItem-content"></div>
     </div>
