adjusts table layout and adds icon to readme button

--- a/ui/sections/containers/controls/docker-image-search.reel/table-row-image.reel/table-row-image.html
+++ b/ui/sections/containers/controls/docker-image-search.reel/table-row-image.reel/table-row-image.html
@@ -72,7 +72,7 @@
         <div><div data-montage-id="description"></div></div>
         <div><div data-montage-id="version"></div></div>
         <div><div data-montage-id="star_count"></div></div>
-        <div><div data-montage-id="readme"></div></div>
+        <div><button data-montage-id="readme" class="Button--icon-after"><svg><use xlink:href="#i-arrow"/></svg></button></div>
     </div>
 </body>
 </html>
