Remove the none button from users/groups selector field within the share permission.

--- a/ui/controls/search-groups.reel/search-groups.html
+++ b/ui/controls/search-groups.reel/search-groups.html
@@ -23,6 +23,7 @@
                 "disabled": {"<-": "@owner.disabled"},
                 "isLoading": {"<-": "@owner.isLoading"},
                 "initialOptions": {"<-": "@owner.initialOptions"},
+                "hasNoneButton": {"<-": "@owner.hasNoneButton"},
                 "validationPath": {"<-": "@owner.validationPath"}
             }
         }
