--- a/ui/controls/search-users.reel/search-users.html
+++ b/ui/controls/search-users.reel/search-users.html
@@ -22,7 +22,8 @@
                 "isLoading": {"<-": "@owner.isLoading"},
                 "displayedValue": {"<-": "@owner.displayedValue"},
                 "initialOptions": {"<-": "@owner.initialOptions"},
-                "validationPath": {"<-": "@owner.validationPath"}
+                "validationPath": {"<-": "@owner.validationPath"},
+                "hasNoneButton": {"<-": "@owner.hasNoneButton"}
             }
         }
     }
