hides inspector help button until messages are added

--- a/ui/inspectors/inspector.reel/inspector.html
+++ b/ui/inspectors/inspector.reel/inspector.html
@@ -139,7 +139,7 @@
                 "element": {"#": "inspectorHelpButton"}
             },
             "bindings": {
-                "classList.has('is-hidden')": {"<-": "false"}
+                "classList.has('is-hidden')": {"<-": "true"}
             }
         }
     }
