Remove wrong reference to @table in table-row-port

--- a/ui/sections/containers/controls/table-port.reel/table-row-port.reel/table-row-port.html
+++ b/ui/sections/containers/controls/table-port.reel/table-row-port.reel/table-row-port.html
@@ -6,8 +6,7 @@
     {
         "owner": {
             "properties": {
-                "element": {"#": "owner"},
-                "table": {"@": "table"}
+                "element": {"#": "owner"}
             },
             "bindings": {
                 "object.protocol": {"<-": "@owner.object.protocol.defined() ? @owner.object.protocol : 'TCP'"}
