--- a/ui/sections/system/inspectors/crypto-certificate.reel/crypto-certificate-import.reel/crypto-certificate-import.html
+++ b/ui/sections/system/inspectors/crypto-certificate.reel/crypto-certificate-import.reel/crypto-certificate-import.html
@@ -10,7 +10,7 @@
                 "element": {"#": "owner"}
             },
             "bindings": {
-                "isSaveDisabled": {"<-": "(!@owner.certificateFile || !@owner.privateKeyFile)"}
+                "isSaveDisabled": {"<-": "(!@owner.certificateFile"}
             }
         },
         "certificate": {
